[tool.poetry]
name = "financial_analyst_crew"
version = "0.1.0"
description = "financial_analyst_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = {extras = ['tools'], version = "^0.22.2"}
langchain-groq = "^0.1.4"


[tool.poetry.scripts]
financial_analyst_crew = "financial_analyst_crew.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"